--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header h1 {
 
 }
  .hero {
-    background-image: url("./colors.jpg");
+    background-image: url("./images/colors.jpg");
     height: 500px;
     background-size: cover;
     background-position: center;
